updata: some code and docs about apis
